--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "discordbot",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "build": "tsc",
-    "start": "node build/index.js",
-    "dev": "ts-node-dev --ignore-watch node_modules src/index.ts"
-  },
-  "devDependencies": {
-    "@types/node": "^14.14.19",
-    "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.3"
-  },
-  "dependencies": {
-    "discord-webhook-node": "^1.1.8",
-    "discord.js": "^12.5.1"
-  }
+   "name": "discordbot",
+   "version": "1.0.0",
+   "main": "index.js",
+   "license": "MIT",
+   "scripts": {
+      "build": "tsc",
+      "start": "ts-node src/index.ts",
+      "dev": "ts-node-dev --ignore-watch node_modules src/index.ts"
+   },
+   "devDependencies": {
+      "@types/node": "^8.0.29",
+      "ts-node-dev": "^1.1.1",
+      "typescript": "3.3.3333",
+      "ts-node": "3.3.0"
+   },
+   "dependencies": {
+      "discord-webhook-node": "^1.1.8",
+      "discord.js": "^12.5.1",
+      "mysql": "^2.14.1",
+      "pg": "^8.5.1",
+      "reflect-metadata": "^0.1.10",
+      "typeorm": "0.2.29"
+   }
 }
