--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
-   "name": "discordbot",
-   "version": "1.0.0",
-   "main": "index.js",
-   "license": "MIT",
-   "scripts": {
-      "build": "tsc",
-      "start": "ts-node src/index.ts",
-      "dev": "ts-node-dev --ignore-watch node_modules src/index.ts"
-   },
-   "devDependencies": {
-      "@types/node": "^8.0.29",
-      "ts-node": "3.3.0",
-      "ts-node-dev": "^1.1.1",
-      "typescript": "3.3.3333"
-   },
-   "dependencies": {
-      "axios": "^0.21.1",
-      "discord-webhook-node": "^1.1.8",
-      "discord.js": "^12.5.1",
-      "mysql": "^2.14.1",
-      "pg": "^8.5.1",
-      "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.29"
-   }
+  "name": "discordbot",
+  "version": "1.1.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "start": "ts-node src/index.ts",
+    "dev": "ts-node-dev --ignore-watch node_modules src/index.ts",
+    "test": "jest --passWithNoTests --watch",
+    "test:staged": "jest --passWithNoTests"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.22",
+    "git-commit-msg-linter": "^3.0.0",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.0",
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.1",
+    "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "discord.js": "^12.5.1",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.3",
+    "mysql": "^2.14.1",
+    "pg": "^8.5.1",
+    "reflect-metadata": "^0.1.10",
+    "typeorm": "0.2.29"
+  }
 }
